<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">How Many Days?</string>
    
    <!-- Labels -->
    <string name="there_are">There are:</string>
    <string name="until_IRS">until IRS.</string>
    <string name="today">Today:</string>
    <string name="today_string">today.</string>
    
    <string name="date_format">EEE, d MMM yyyy HH:mm:ss Z</string>
    
    <!-- Date formatting strings -->
    <string name="x_days">%1$,d days</string>
    <string name="x_hours">%1$,d hours</string>
    <string name="x_minutes">%1$,d minutes</string>
    <string name="x_seconds">%1$,d seconds!</string>
    <string name="x_full_time">+ %1$d:%2$02d:%3$02d</string>
    <string name="x_small_time">+ %1$d:%2$02d</string>
    
    <string name="x_days_ago">%1$,d days ago</string>
    
    <string name="its_IRS">IRS DAY!</string>
    
	<!--  Errors -->
    <string name="error_order">Sorry, your IRS date is before today! The app won\'t be very useful that way - have you graduated?</string>
    
    <!--  Menu -->
    <string name="set_alarms">Set Alarms</string>
    <string name="set_irs">Set IRS</string>

	<!--  Dialogs -->    
    <string name="pick_irs">Choose your IRS day.</string>
</resources>
