<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:gravity="center">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_height="fill_parent"
	    android:layout_width="fill_parent"
	    android:gravity="center_vertical" android:orientation="horizontal"
	    android:id="@+id/countdown">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent" android:orientation="vertical">
		    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:orientation="horizontal" android:gravity="center" android:layout_marginBottom="10dp">
				<TextView android:layout_height="wrap_content" android:text="@string/today" android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_marginRight="2dp"></TextView>
				<TextView android:layout_height="wrap_content" android:text="@string/today_string" android:id="@+id/todayView" android:layout_width="wrap_content" ></TextView>
			</LinearLayout>
		    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/x_days" android:id="@+id/daysView" android:gravity="center" android:textSize="72dp" android:textStyle="bold"></TextView>
		    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/timeView" android:text="@string/x_full_time" android:textSize="16dp" android:gravity="center"></TextView>
			<TextView android:layout_width="fill_parent" android:id="@+id/textView1" android:text="@string/until_IRS" android:layout_height="wrap_content" android:gravity="center"></TextView>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_height="fill_parent"
	    android:layout_width="fill_parent"
	    android:gravity="center" android:orientation="horizontal"
	    android:id="@+id/done"
	    android:visibility="gone">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content" android:orientation="vertical">
		    <TextView android:layout_width="wrap_content" android:id="@+id/done" android:text="@string/its_IRS" android:layout_height="wrap_content" android:textSize="60dp" android:textColor="#7D26CD" android:textStyle="bold" android:gravity="center"></TextView>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>